--- a/.github/workflows/auto_resonance.yml
+++ b/.github/workflows/auto_resonance.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Run Resonant Stability Field
         run: echo "Running Resonant Stability Field validation"
 
+      # Provenance only runs for trusted pushes to main.
       - name: Generate Build Provenance
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: actions/attest-build-provenance@v1
