--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
 name: Feature request
-description: Запропонувати нову функцію або поліпшення.
+description: Propose a new feature or improvement.
 title: "[Feature]: "
 labels:
   - enhancement
@@ -7,32 +7,32 @@ body:
   - type: markdown
     attributes:
       value: |
-        Опишіть бажану функціональність і мотивацію.
+        Describe the desired functionality and motivation.
   - type: textarea
     id: problem
     attributes:
-      label: Проблема або мотивація
-      description: Яку проблему вирішить ця зміна?
+      label: Problem or motivation
+      description: What problem will this change solve?
     validations:
       required: true
   - type: textarea
     id: proposal
     attributes:
-      label: Пропозиція рішення
-      description: Як ви бачите реалізацію цієї функції?
+      label: Proposed solution
+      description: How do you see this feature being implemented?
     validations:
       required: true
   - type: textarea
     id: alternatives
     attributes:
-      label: Альтернативи
-      description: Чи розглядалися інші варіанти?
+      label: Alternatives
+      description: Have other options been considered?
     validations:
       required: false
   - type: textarea
     id: context
     attributes:
-      label: Додатковий контекст
-      description: Посилання, приклади, або інші деталі.
+      label: Additional context
+      description: Links, examples, or other details.
     validations:
       required: false
